feat: enhance logging capabilities and add configuration management

--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,22 @@
 uv
 python-dotenv
 ipykernel
+structlog
+
+
 langchain
 langchain-community
+langchain_classic
+langchain_core
+langchain-groq
+langchain-google-genai
+langchain_openai
+langchain_text_splitters
+
+langsmith
 openai
+
+python-multipart
+docx2txt
 tiktoken
 rapidocr-onnxruntime
